# Photograph

./: .gitignore  Cargo.toml  Makefile  README.md
docs/: index.html  pipeline-architecture.md  pipeline-decisions.md  raw-load-latency.md
packaging/linux/: photograph.desktop
packaging/macos/: Info.plist.in  icon-background.svg.in  photograph.icns
snap/: snapcraft.yaml
snap/command-chain/: desktop-launch
snap/gui/: photograph.desktop
src/: app.rs  browser.rs  config.rs  editor.rs  main.rs  metadata.rs  state.rs  thumbnail.rs  viewer.rs
src/processing/: color.rs  exposure.rs  filters.rs  gpu_pipeline.rs  gpu_spike.rs  highlights.rs  mod.rs  sharpness.rs  transform.rs
