[package]
name = "image-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31"
egui = "0.31"
exif = { version = "0.5", package = "kamadak-exif" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
anyhow = "1"
dirs = "6"
imageproc = "0.25"
rawler = "0.7.1"

[profile.release]
opt-level = 3
